--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=AcmeCorpDb;User Id=sa;Password=Sunil@1947;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=sql_server2022;Database=AcmeCorpDb;User Id=sa;Password=Sunil@1947;MultipleActiveResultSets=true;TrustServerCertificate=true"
   }
 }
